<resources>
    <string name="app_name">IAmRich</string>
    <string name="company_name">TechnoPro Solutions Kenya Limited</string>
    <string name="company_logo_description">TechnoPro Solutions Kenya Limited Logo</string>
    <string name="launch_game">Launch Game</string>
    <string name="roll_dice">Roll Dice</string>
    <string name="play_piano">Play Piano</string>
    <string name="eight_ball">Magic 8 Ball</string>
    <string name="roll_ball">Roll Ball</string>
    <string name="las_vegas_logo">Las Vegas Logo</string>
    <string name="right_dice">Right Dice</string>
    <string name="left_dice">Left Dice</string>
    <string name="check_weather">Check Weather</string>
    <string name="weather_updates">Weather Updates</string>
    <string name="city_name">City</string>
    <string name="choose_location">Choose Location</string>
    <string name="enter_ciy_name">Enter City Name</string>
    <string name="back">Back</string>
    <string name="exit">Exit</string>
    <string name="not_applicable">N/A</string>
</resources>
