<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/company_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"

        android:layout_marginBottom="8dp"

        android:contentDescription="@string/company_logo_description"

        app:layout_constraintBottom_toTopOf="@+id/play_dice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/company_logo" />

    <Button
        android:id="@+id/play_dice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"



        android:text="@string/roll_dice"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ball_button"
        app:layout_constraintBottom_toTopOf="@+id/play_piano"

        />

    <Button
        android:id="@+id/ball_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"

        android:text="@string/eight_ball"

        app:layout_constraintStart_toEndOf="@+id/play_dice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/check_weather"

        />

    <Button
        android:id="@+id/play_piano"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"

        android:text="@string/play_piano"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/check_weather"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <Button
        android:id="@+id/check_weather"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"

        android:text="@string/check_weather"
        app:layout_constraintStart_toEndOf="@+id/play_piano"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:onClick="loadWeatherActivity"
        />

</android.support.constraint.ConstraintLayout>